# Emotional-BWI-Segbot

./: README.md
emotion_driver/: CMakeLists.txt  CMakeLists.txt~  emotion_info.cpp  package.xml  package.xml~
emotion_driver/src/: emotion_driver.cpp  emotion_face.cpp  emotion_gui.cpp  emotion_info.cpp
